--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,10 @@
 PORT=3000
-DB_HOST=localhost
-DB_USER=root
-DB_PASS=root
-DB_NAME=edusched_db
+
+DB_HOST=bjlzoeh8hr7cpv4biqqc-mysql.services.clever-cloud.com
+DB_USER=uosplakfaxoc0wzw
+DB_PASS=LH78km7lqJvNlNAD97bz
+DB_NAME=bjlzoeh8hr7cpv4biqqc
+DB_PORT=3306
+
 JWT_SECRET=supersecretkey123
+
